--- a/module-two/Caixas - CSS/style.css
+++ b/module-two/Caixas - CSS/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: lightblue;
+    background-color: rgb(121, 121, 121);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -9,19 +9,21 @@ header {
     text-align: center;
     display: grid;
     margin: 10px;
+    border-radius: 10px 20px;
 }
 
 nav {
-    background-color: aquamarine;
+    background-color: black;
     padding: 3px;
     margin: 10px;
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
 }
 
 nav a {
     margin-right: 32px;
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
@@ -37,6 +39,7 @@ main {
     background-color: aliceblue;
     margin: 10px;
     display: grid;
+    border-radius: 10px 20px;
 }
 
 #Assuntos {
@@ -45,17 +48,22 @@ main {
 }
 
 #noticias {
-    background-color: aquamarine;
+    background-color: black;
+    color: white;
     margin: 10px;
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 10px 20px;
+    padding: 0 10px;
 }
 
 footer {
-    background-color: blue;
+    background-color: black;
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.3);
-    padding: 2px;
+    padding: 2px 10px;
     color: white;
+    border-radius: 5px;
     font-weight: bold;
+
 }
 
 footer p {
