--- a/Desafios/Desafio 10 - CSS/style.css
+++ b/Desafios/Desafio 10 - CSS/style.css
@@ -1,7 +1,66 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-body {
-    background-color: #c5ebd6;
+@font-face {
+    font-family: "Android";
+    src: url(fontes/idroid.otf);
+    font-weight: normal;
+}
+
+:root {
+    --cor0: #c5ebd6;
+    --cor2: #83e1ad;
+    --cor3: #3ddc84;
+    --cor4: #2fa866;
+    --cor5: #063d1e;
+    --color6: white;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: "Bebas Neue", sans-serif;
+    --fonte-android: "Android", sans-serif;
+}
+
+* {
     padding: 0px;
     margin: 0px;
+}
+
+body {
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
+}
+
+header {
+    background-color: var(--cor4);
+}
+
+header h1 {
+    color: var(--color6);
+    font-family: var(--fonte-destaque);
+}
+
+header p {
+    color: var(--color6);
+}
+
+nav {
+    background-color: var(--cor5);
+}
+
+main {
+    background-color: var(--color6);
+}
+
+main h1 {
+    color: var(--cor5);
+    font-family: var(--fonte-android);
+}
+
+main h2 {
+    font-family: var(--fonte-android);
+}
+
+footer {
+    background-color: var(--cor5);
+    color: var(--color6);
 }
