--- a/Desafios/Desafio 10 - CSS/style.css
+++ b/Desafios/Desafio 10 - CSS/style.css
@@ -30,25 +30,70 @@ body {
     font-family: var(--fonte-padrao);
 }
 
+a.externo::after {
+    content: "\1F517";
+}
+
 header {
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     background-color: var(--cor4);
+    min-height: 100px;
+    padding: 30px;
+    text-align: center;
 }
 
 header h1 {
     color: var(--color6);
     font-family: var(--fonte-destaque);
+    margin-bottom: 20px;
+    font-size: 3em;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.3);
 }
 
 header p {
     color: var(--color6);
+    max-width: 400px;
+    padding: 0px 10px;
+    margin: auto;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.3);
 }
 
 nav {
     background-color: var(--cor5);
+    padding: 10px;
+    text-shadow: 0px 7px 7px rgba(0, 0, 0, 0.3);
+    margin: auto;
+}
+
+nav div {
+    max-width: 1040px;
+    margin: auto;
+}
+
+nav a {
+    color: white;
+    padding: 10px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 5px;
+    transition-duration: 0.5s;
+
+}
+
+nav a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
 }
 
 main {
     background-color: var(--color6);
+    min-width: 320px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.30);
+    border-radius: 0px 0px 10px 10px;
 }
 
 main h1 {
@@ -58,9 +103,95 @@ main h1 {
 
 main h2 {
     font-family: var(--fonte-android);
+    color: var(--cor4);
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor2), transparent, transparent);
+    text-indent: 8px;
+}
+
+main p {
+    margin: 15px 0;
+    text-align: justify;
+    text-indent: 30px;
+    line-height: 1.5em;
+    font-size: 1em;
+}
+
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+main a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
+    padding: 2px 6px;
+}
+
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+.dan-droids img {
+    width: 100%;
+}
+
+.irina-blok img {
+    width: 100%;
+}
+
+.bugdroid {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+iframe {
+    width: 100%;
+}
+
+aside {
+    background-color: var(--cor2);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
+}
+
+aside h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0 0;
+}
+
+aside ul {
+    list-style-type: "\2714\00A0";
+    list-style-position: inside;
+    columns: 2;
+}
+
+aside abbr {
+    text-decoration: none;
 }
 
 footer {
     background-color: var(--cor5);
     color: var(--color6);
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer a {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--cor2);
+    text-decoration: underline;
 }
