--- a/Outros/CSS Grid Layout e Flexbox/style.css
+++ b/Outros/CSS Grid Layout e Flexbox/style.css
@@ -5,6 +5,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    padding-bottom: 100px;
+}
+
 a {
     font-size: 1em;
     color: white;
@@ -65,4 +69,33 @@ img {
     max-width: 800px;
     margin: auto;
     gap: 20px;
+}
+
+.grid1>div:nth-child(n+4) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    align-items: center;
+}
+
+.grid1>div.anuncio {
+    grid-column: 1;
+    grid-row: 2/5;
+    display: block;
+}
+
+@media (max-width: 600px) {
+    .grid1 {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .grid1>div:nth-child(n+4) {
+        display: block;
+    }
+
+    .grid1>div.anuncio {
+        grid-column: auto;
+        grid-row: auto;
+        order: -1;
+    }
 }
